Fixel add_new_game handling for invalid managaer files input (wrong paths and invalid file formats). Fixed reducer and srng getting ports and addresses from args